--- a/tableau.html
+++ b/tableau.html
@@ -11,6 +11,6 @@
 </head>
 <body>
     <h2>Интерактивный дашборд</h2>
-    <iframe src="https://public.tableau.com/app/profile/imran.amietov/viz/__17393818638160/Dashboard1" width="100%" height="800px"></iframe>
+    <iframe src="https://public.tableau.com/views/__17393818638160/Dashboard1?:language=en-US&:sid=&:redirect=auth&:display_count=n&:origin=viz_share_link" width="100%" height="800px"></iframe>
 </body>
 </html>
